@@ -3,7 +3,7 @@
  * To change this template file, choose Tools | Templates
  * and open the template in the editor.
  */
-package org.dama.datasynth.test.graphreader;
+package org.dama.datasynth.test.graphs;
 
 import java.io.BufferedReader;
 import java.io.DataInputStream;
@@ -12,19 +12,19 @@ import java.io.InputStreamReader;
 import java.util.HashSet;
 import java.util.Set;
 
-import org.dama.datasynth.test.graphreader.types.Graph;
-import org.dama.datasynth.test.graphreader.types.Partition;
+import org.dama.datasynth.test.graphs.types.Graph;
+import org.dama.datasynth.test.graphs.types.Partition;
 
 /**
  *
  * @author joangui
  */
-public class GraphReaderFromNodePairFile implements GraphReaderInterface {
+public class GraphReaderFromFile implements GraphReaderInterface {
 
 	private final String pathGraph;
 	private final String pathPartition;
 
-	public GraphReaderFromNodePairFile(String pathGraph, String pathPartition) {
+	public GraphReaderFromFile(String pathGraph, String pathPartition) {
 		this.pathGraph = pathGraph;
 		this.pathPartition = pathPartition;
 	}
@@ -39,14 +39,16 @@ public class GraphReaderFromNodePairFile implements GraphReaderInterface {
 
 		String line;
 		Graph g = new Graph();
-		Long nodeIdTail = null;
-		Long nodeIdHead = null;
+		long nodeId = 1;
 		while ((line = br.readLine()) != null) {
 			String[] lineArray = line.trim().split(" ");
-			nodeIdTail = Long.valueOf(lineArray[0]);
-			nodeIdHead = Long.valueOf(lineArray[1]);
+			Set adjacencies = new HashSet<>();
+			for (String node2Id : lineArray) {
+				adjacencies.add(new Long(node2Id));
+			}
 
-			g.addEdge(nodeIdTail, nodeIdHead);
+			g.setNeighbors(nodeId, adjacencies);
+			nodeId++;
 		}
 		return g;
 	}
@@ -61,12 +63,9 @@ public class GraphReaderFromNodePairFile implements GraphReaderInterface {
 
 		String line;
 		Partition p = new Partition();
-		Long nodeId;
-		Long partitionId;
+		long nodeId = 1;
 		while ((line = br.readLine()) != null) {
-			String[] lineArray = line.split(" ");
-			nodeId = Long.valueOf(lineArray[0]);
-			partitionId = Long.valueOf(lineArray[1]);
+			Long partitionId = Long.valueOf(line);
 			p.addToPartition(nodeId, partitionId);
 			nodeId++;
 		}
